<resources>
    <string name="app_name">Smart Civics</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="with_party_string">%1$d %</string>
    <string name="not_available_text">Not Available</string>
    <string name="no_summary_text">No summary available.</string>
    <string name="no_subject_available_text">No primary subject available</string>
    <string name="map_title">Locations</string>
    <string name="vote_details">Vote Details:</string>
    <string name="result">Result:</string>
    <string name="position">Position:</string>
    <string name="totals">Totals:</string>
    <string name="yes">Yes:</string>
    <string name="no">No:</string>
    <string name="not_voting">Not Voting:</string>
    <string name="present">Present:</string>
    <string name="roll_call">Roll Call:</string>
    <string name="question">Question:</string>
    <string name="election_info_link">Election Info Link:</string>
    <string name="absentee_voting_info_link">Absentee Voting Info Link:</string>
    <string name="election_registration_link">Election Registration Link:</string>
    <string name="election_registration_confirmation_link">Election Registration Confirmation Link:</string>
    <string name="voting_location_finder_link">Voting Location Finder Link:</string>
    <string name="election_administration_information">Election Administration Information</string>
    <string name="primary_subject">Primary Subject:</string>
    <string name="last_action">Last Action:</string>
    <string name="summary">Summary:</string>
    <string name="link">Link:</string>
    <string name="chair">Chair:</string>
    <string name="members">Members:</string>
    <string name="party_representation_on_committee">Party representation on committee:</string>
    <string name="lets_find_your_representatives">Lets find your representatives:</string>
    <string name="address">Address</string>
    <string name="search_entered_address">search entered address</string>
    <string name="use_location">Use Location</string>
    <string name="rep_image">rep image</string>
    <string name="phone_number">Phone Number:</string>
    <string name="website">Website:</string>
    <string name="links">Links:</string>
    <string name="twitter">Twitter:</string>
    <string name="facebook">Facebook:</string>
    <string name="youtube">YouTube:</string>
    <string name="more_info">More Info:</string>
    <string name="dates">Dates:</string>
    <string name="polling_hours">Polling hours:</string>
    <string name="vote">Vote:</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="ytd">YTD:</string>
    <string name="next_election">Next election:</string>
    <string name="party_icon">party icon</string>
    <string name="elections">Elections</string>
    <string name="news">News</string>
    <string name="news_article_image">news article image</string>
    <string name="no_upcoming_elections">No upcoming elections</string>
    <string name="elections_information">Elections Information</string>
    <string name="use_current_location_or_enter_address">Use current location or enter address</string>
    <string name="enter_address">Enter Address:</string>

</resources>