<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="expense"
            type="com.mattg.smartcivics.models.expenses.ResultMemberQuarterlyExpense" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_expense_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_expense_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@{expense.category}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_expense_category_title"
            app:layout_constraintStart_toEndOf="@+id/tv_expense_category_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/amount"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_expense_category_title" />

        <TextView
            android:id="@+id/tv_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:text="@{expense.amount.toString()}"
            app:layout_constraintBottom_toTopOf="@+id/tv_ytd_title"
            app:layout_constraintStart_toStartOf="@+id/tv_expense_category"
            app:layout_constraintTop_toTopOf="@+id/tv_amount_title" />

        <TextView
            android:id="@+id/tv_ytd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ytd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_title" />

        <TextView
            android:id="@+id/tv_ytd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@{expense.yearToDate.toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_expense_amount"
            app:layout_constraintTop_toTopOf="@+id/tv_ytd_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>