<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
<variable
    name="vote"
    type="com.mattg.smartcivics.models.votes.Vote" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_vote_detail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_membervotedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_bill_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{vote.bill.title}"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_bill_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@{vote.bill.number.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bill_title" />

            <TextView
                android:id="@+id/tv_bill_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{vote.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bill_number" />

            <TextView
                android:id="@+id/tv_yes_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{vote.total.yes.toString()}"
                app:layout_constraintStart_toEndOf="@+id/tv_yes_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_bill_description"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_no_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{vote.total.no.toString()}"
                app:layout_constraintStart_toEndOf="@+id/tv_no_title"
                app:layout_constraintTop_toTopOf="@+id/tv_yes_votes"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_member_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{vote.position}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_no_votes"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_yes_votes" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:text="@{vote.question}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_question_title"
                app:layout_constraintTop_toTopOf="@+id/tv_question_title"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/result"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_title" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{vote.result}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_question"
                app:layout_constraintTop_toTopOf="@+id/tv_result_title"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{vote.date.toString()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{vote.time.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="text" />

            <TextView
                android:id="@+id/tv_yes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/yes"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_yes_votes" />

            <TextView
                android:id="@+id/tv_no_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/no"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_yes_votes"
                app:layout_constraintTop_toTopOf="@+id/tv_yes_votes" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/vote"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_member_vote"
                app:layout_constraintTop_toTopOf="@+id/tv_member_vote" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>